# fastApiRoot

./: .gitignore  MANIFEST.in  pyproject.toml  requirements.txt  user_portfolio.md
.agents/workflows/: test-application.md
app/: config.py  main.py
app/api/: __init__.py
app/api/auth/: router.py  schema.py  service.py
app/api/products/: router.py  service.py
app/api/utils/: router.py
app/core/error/: error_types.py
app/core/middleware/: exception_middleware.py
app/core/response/: status_mapper.py
app/database/mongodb/: __init__.py  client.py
app/database/mysql/: __init__.py  session.py
app/database/postgresql/: __init__.py  session.py
app/depends/: jwt_depends.py  mongo_depends.py  mysql_depends.py
app/graphql/: context.py
app/models/mongodb/: product.py
app/models/mysql/: __init__.py  admin.py
app/models/postgresql/: __init__.py  users.py
fastapi_fusion_core/: cli.py
fastapi_fusion_core/template/: README.md  requirements.txt
fastapi_fusion_core/template/app/: config.py  exception.py  main.py
fastapi_fusion_core/template/app/api/: __init__.py
fastapi_fusion_core/template/app/api/auth/: service.py
fastapi_fusion_core/template/app/api/products/: schema.py
fastapi_fusion_core/template/app/api/utils/: router.py
fastapi_fusion_core/template/app/depends/: language_depends.py  mongo_depends.py  mysql_depends.py  postgres_depends.py
fastapi_fusion_core/template/app/graphql/: schema.py
fastapi_fusion_core/template/app/utils/: schemas_utils.py
fastapi_fusion_core/template/tests/: test_main.py
(+12 files in other folders)
